include/McSolverEngine/CApi.h

typedef enum McSolverEngineResultCode
{
    MCSOLVERENGINE_RESULT_SUCCESS = 0,
    MCSOLVERENGINE_RESULT_INVALID_ARGUMENT = 1,
    MCSOLVERENGINE_RESULT_IMPORT_FAILED = 2,
    MCSOLVERENGINE_RESULT_SOLVE_FAILED = 3,
    MCSOLVERENGINE_RESULT_UNSUPPORTED = 4,
    MCSOLVERENGINE_RESULT_GEOMETRY_EXPORT_FAILED = 5,
    MCSOLVERENGINE_RESULT_BREP_EXPORT_FAILED = 6,
    MCSOLVERENGINE_RESULT_OPEN_CASCADE_UNAVAILABLE = 7,
    MCSOLVERENGINE_RESULT_OUT_OF_MEMORY = 8,
    MCSOLVERENGINE_RESULT_VARSET_EXPRESSION_UNSUPPORTED_SUBSET = 9
} McSolverEngineResultCode;
typedef struct McSolverEngineGeometryResult
{
    const char* sketchName;        // UTF-8
    const char* importStatus;      // UTF-8
    int skippedConstraints;
    int messageCount;
    char** messages;               // UTF-8
    const char* solveStatus;       // UTF-8
    int degreesOfFreedom;
    int conflictingCount;
    const int* conflicting;
    int redundantCount;
    const int* redundant;
    int partiallyRedundantCount;
    const int* partiallyRedundant;
    const char* exportKind;        // UTF-8
    const char* exportStatus;      // UTF-8
    int varSetPropertyCount;
    const McSolverEngineVarSetProperty* varSetProperties;
    McSolverEnginePlacement placement;
    int geometryCount;
    const McSolverEngineGeometryRecord* geometries;
} McSolverEngineGeometryResult;
typedef struct McSolverEngineBRepResult
{
    const char* sketchName;        // UTF-8
    const char* importStatus;      // UTF-8
    int skippedConstraints;
    int messageCount;
    char** messages;               // UTF-8
    const char* solveStatus;       // UTF-8
    int degreesOfFreedom;
    int conflictingCount;
    const int* conflicting;
    int redundantCount;
    const int* redundant;
    int partiallyRedundantCount;
    const int* partiallyRedundant;
    const char* exportKind;        // UTF-8
    const char* exportStatus;      // UTF-8
    int varSetPropertyCount;
    const McSolverEngineVarSetProperty* varSetProperties;
    McSolverEnginePlacement placement;
    const char* brepUtf8;          // UTF-8
} McSolverEngineBRepResult;
MCSOLVERENGINE_CAPI_EXPORT const char* McSolverEngine_GetVersion(void);
// documentXmlUtf8          — FreeCAD Document.xml content (UTF-8)
// sketchNameUtf8           — name of the Sketch object to solve (UTF-8)
MCSOLVERENGINE_CAPI_EXPORT McSolverEngineResultCode McSolverEngine_SolveToGeometry(
    const char* documentXmlUtf8,
    const char* sketchNameUtf8,
    McSolverEngineGeometryResult** result
);
// parameterKeysUtf8 / parameterValuesUtf8 — VarSet property overrides (UTF-8, ObjectOrLabel.Property)
MCSOLVERENGINE_CAPI_EXPORT McSolverEngineResultCode McSolverEngine_SolveToGeometryWithParameters(
    const char* documentXmlUtf8,
    const char* sketchNameUtf8,
    const char* const* parameterKeysUtf8,
    const char* const* parameterValuesUtf8,
    int parameterCount,
    McSolverEngineGeometryResult** result
);
// documentXmlUtf8 — FreeCAD Document.xml content (UTF-8)
MCSOLVERENGINE_CAPI_EXPORT McSolverEngineResultCode McSolverEngine_SolveToBRep(
    const char* documentXmlUtf8,
    const char* sketchNameUtf8,
    McSolverEngineBRepResult** result
);
MCSOLVERENGINE_CAPI_EXPORT McSolverEngineResultCode McSolverEngine_SolveToBRepWithParameters(
    const char* documentXmlUtf8,
    const char* sketchNameUtf8,
    const char* const* parameterKeysUtf8,
    const char* const* parameterValuesUtf8,
    int parameterCount,
    McSolverEngineBRepResult** result
);
MCSOLVERENGINE_CAPI_EXPORT void McSolverEngine_FreeGeometryResult(McSolverEngineGeometryResult* value);
MCSOLVERENGINE_CAPI_EXPORT void McSolverEngine_FreeBRepResult(McSolverEngineBRepResult* value);
typedef enum McSolverEngineFCStdResultCode
{
    MCSOLVERENGINE_FCSTD_SUCCESS = 0,
    MCSOLVERENGINE_FCSTD_OPEN_FAILED = 1,
    MCSOLVERENGINE_FCSTD_NOT_ZIP = 2,
    MCSOLVERENGINE_FCSTD_XML_NOT_FOUND = 3,
    MCSOLVERENGINE_FCSTD_DECOMPRESS_FAILED = 4,
    MCSOLVERENGINE_FCSTD_OUT_OF_MEMORY = 5,
} McSolverEngineFCStdResultCode;
// fcstdPathUtf8 — path to .FCStd file (UTF-8)
// documentXmlOut — extracted Document.xml content (UTF-8), caller frees via FreeFCStdDoc
MCSOLVERENGINE_CAPI_EXPORT McSolverEngineFCStdResultCode McSolverEngine_ExtractFCStdDoc(
    const char* fcstdPathUtf8,
    char** documentXmlOut
);
MCSOLVERENGINE_CAPI_EXPORT void McSolverEngine_FreeFCStdDoc(char* documentXml);
// Returns the last error message for the calling thread (UTF-8, thread-local).
MCSOLVERENGINE_CAPI_EXPORT const char* McSolverEngine_GetLastError(void);