include/McSolverEngine/CompatModel.h

struct Point2
{
    double x {};
    double y {};
};
struct Placement
{
    double px {};
    double py {};
    double pz {};
    double qx {};
    double qy {};
    double qz {};
    double qw {1.0};
};
struct BSplinePole
{
    Point2 point {};
    double weight {1.0};
};
struct BSplineKnot
{
    double value {};
    int multiplicity {1};
};
enum class GeometryKind
{
    Point,
    LineSegment,
    Circle,
    Arc,
    Ellipse,
    ArcOfEllipse,
    ArcOfHyperbola,
    ArcOfParabola,
    BSpline
};
enum class PointRole
{
    None,
    Start,
    End,
    Mid,
    Center
};
enum class ConstraintKind
{
    Coincident,
    Horizontal,
    Vertical,
    DistanceX,
    DistanceY,
    Distance,
    Parallel,
    Tangent,
    Perpendicular,
    Angle,
    Radius,
    Diameter,
    Equal,
    Symmetric,
    PointOnObject,
    InternalAlignment,
    SnellsLaw,
    Block,
    Weight
};